# BUT3

./: README.md
Neo4j/: tp5.txt
Prog3D/: generateur_svg.py
Prog3D/TDDepart/: CMakeLists.txt  config.h.in  main.cpp
Prog3D/TDDepart/b/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h  td
Prog3D/TDDepart/b/Testing/Temporary/: CTestCostData.txt
Prog3D/TDDepart/shaders/: basic.frag.glsl  basic.vert.glsl
Prog3D/canevasTD4/: td4.cpp
Prog3D/canevasTD5/: GLError.cpp  GLError.h  README.txt  config.h.in  repere.cpp  repere.h  td5.cpp
Prog3D/td1/: generateur_svg.py
R5.04 - Qualité algorithmique/: shootemup_menu  test  test.c
R5.04 - Qualité algorithmique/TD1/: Makefile  tp1_exos.c  tp1_exos.h  tp1_main.c
R5.04 - Qualité algorithmique/TD2/: liste_chainee.c  pointeurs.c
R5.04 - Qualité algorithmique/TD3/: quadtree.c
R5.04 - Qualité algorithmique/TP1/: Makefile  bonjour.c  bonjour.h  bonjour_2  main.c
R5.04 - Qualité algorithmique/TP2/: Makefile  callgrind.out.19022  liste.c  liste.h  main  main.c  makefile
R5.04 - Qualité algorithmique/TP3/: Makefile  log_vg  prog  valgrind.c
R5.05_Prog_avance/Coffe_Machine/: Cargo.toml
R5.05_Prog_avance/Squelette météo-20251113/: Cargo.toml
R5.05_Prog_avance/dithering/: downgrade-1.75.sh
R5.06 TD/TD1/: index.js  package-lock.json  package.json
R5.11 Méthodes d'optimisation pour l'aide à la décision (A) /TD-TP 5-20251013/: TP-4.ipynb
R5.11 Méthodes d'optimisation pour l'aide à la décision (A) /TD-TP 5-20251016/: TP-5.1.ipynb  TP-5.2.ipynb
R5.11 Méthodes d'optimisation pour l'aide à la décision (A) /TD3/: collisions.c
R5.11 Méthodes d'optimisation pour l'aide à la décision (A) /TP/: TD1-Math.ipynb  TP-1.1.ipynb  TP-1.2.ipynb  TP-2.1.ipynb  requirements.txt
R5.11 Méthodes d'optimisation pour l'aide à la décision (A) /__MACOSX/: ._TP
R5.12 Modélisation Mathématiques/: main.py  part2.py  tp1.py  tp12_5.py  tp1part2.py
Squelette météo-20251113/: Cargo.toml
dithering/: Cargo.toml
dithering/src/: main.rs
(+76 files in other folders)
